# stripe_shop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  render.yaml
src/payments/: admin.py  urls.py  views.py
src/payments/migrations/: 0001_initial.py  0002_order_alter_item_options_discount_orderitem_and_more.py
src/payments/models/: adds.py  item.py  order.py
src/payments/repositories/: item_repository.py  order_repository.py
src/payments/services/: item_service.py  order_service.py  stripe_service.py
src/shop/: settings.py
src/templates/payments/: base.html  item_detail.html  order_detail.html  success.html
